--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bukidnon Tourism</title> <!-- ✅ Change the tab name -->
-
-    <!-- ✅ Add Favicon -->
-    <link rel="icon" type="image/png" href="https://fictional-fortnight-p549j54v55gh759p-8000.app.github.dev/destinations/logo.png" />
+    <title>Bukidnon Tourism</title> 
+    <link rel="icon" type="image/png" href="/logo.png" />
     
-    <!-- ✅ SEO Meta Description (Optional) -->
     <meta name="description" content="Explore the best destinations in Bukidnon!" />
 
   </head>
